Documentation edits made through Mintlify web editor

--- a/creating-first-chatbot.mdx
+++ b/creating-first-chatbot.mdx
@@ -6,9 +6,7 @@ To get started, first log in to your account. If this is your first time using G
 
 ![](chatbot.png)
 
-
-Initial Setup
--------------
+## Initial Setup
 
 Click on “Create Chatbot”. Then, you will be given a few personas to characterize your AI Agent based on your use case.
 
@@ -50,14 +48,14 @@ If you want to embed the chatbot onto a web page, click **Website**. Detailed i
 
 
 
+![](CHAT.png)
+
 To add more chatbots, simply go to the left sidebar and click the dropdown menu. You will be taken to a dedicated page to manage all of your chatbots.
 
 Please note that depending on your current subscription plan, there is a limit to the number of chatbots you can create.
 
-
-Interrupted Workflows
----------------------
+## Interrupted Workflows
 
 If you need to exit the browser at any point and return to your chatbot creation process later, you will see a screen similar to the image below. You can easily resume your chatbot creation process by clicking on the Work-In-Progress (WIP) chatbot card.
 
-![](chatwize.png)
+![](image.png)
