Documentation edits made through Mintlify web editor

--- a/human-support-escalation.mdx
+++ b/human-support-escalation.mdx
@@ -1,5 +1,5 @@
 ---
-title: Human Support Escalation
+title: "Human Support Escalation"
 ---
 
 As powerful as AI chatbots can be, sometimes human accountability and expertise is still needed. Chatwize's
@@ -78,8 +78,11 @@ certain steps need to be followed.
 ### Access Human Escalation Agent Settings
 
 1. Navigate to Settings: Enter your Human Escalation Agent settings.
+
 2. Enable Human Escalation Notifications: This ensures that notifications related to user support requests are activated.
+
 3. Notification Sound: Activate this option if you wish to receive an audible alert along with the notifications.
+
 4. Save Changes: This ensures that your preferences are applied and notifications are set up according to your selections.
 
 <Frame>
@@ -92,6 +95,7 @@ Each web browser manages permissions for notifications and sounds on a per-websi
 properly, you'll need to enable both permissions within your browser settings. To proceed forward:
 
 1. Launch your browser where you will use [Chatwize platform](https://app-chatwize.com).
+
 2. Enable your browser permissions by choosing option bellow:
 
 <AccordionGroup>
@@ -100,13 +104,16 @@ properly, you'll need to enable both permissions within your browser settings. T
       <Step title="Settings">
         Click on the button near url in the top-left corner, then select "Site
         settings".
+
         <Frame>
           <img src="/images/human-support-escalation-9.png" />
         </Frame>
       </Step>
+
       <Step title="Enable permissions">
         Make sure that "Notifications" and "Sound" are set to Allow in
         "Permissions settings".
+
         <Frame>
           <img src="/images/human-support-escalation-10.png" />
         </Frame>
@@ -114,71 +121,86 @@ properly, you'll need to enable both permissions within your browser settings. T
     </Steps>
   </Accordion>
 
-{" "}
-<Accordion icon="firefox-browser" title="Firefox" iconType="duotone">
-  <Steps>
-    <Step title="Settings">
-      Click on the button near url in the top-left corner, then select
-      "Protection settings".
-      <Frame>
-        <img src="/images/human-support-escalation-11.png" />
-      </Frame>
-    </Step>
-    <Step title="Unblock Chatwize">
-      Scroll to "Permissions" and adjust the default settings for "Speaker
-      Selection" and "Notifications". Ensure that the Chatwize platform is
-      not blocked for both options.
-      <Frame>
-        <img src="/images/human-support-escalation-12.png" />
-      </Frame>
-    </Step>
-  </Steps>
-</Accordion>
+  {" "}
 
-{" "}
-<Accordion icon="edge" title="Microsoft Edge" iconType="duotone">
-  <Steps>
-    <Step title="Settings">
-      Click on the button near url in the top-left corner, then select
-      “Permissions for this site”.
-      <Frame>
-        <img src="/images/human-support-escalation-13.png" />
-      </Frame>
-    </Step>
-    <Step title="Enable permissions">
-      Make sure that "Notifications" are set to Allow in "Permissions settings"
-      <Frame>
-        <img src="/images/human-support-escalation-14.png" />
-      </Frame>
-    </Step>
-  </Steps>
-</Accordion>
+  <Accordion icon="firefox-browser" title="Firefox" iconType="duotone">
+    <Steps>
+      <Step title="Settings">
+        Click on the button near url in the top-left corner, then select
+        "Protection settings".
+
+        <Frame>
+          <img src="/images/human-support-escalation-11.png" />
+        </Frame>
+      </Step>
+
+      <Step title="Unblock Chatwize">
+        Scroll to "Permissions" and adjust the default settings for "Speaker
+        Selection" and "Notifications". Ensure that the Chatwize platform is
+        not blocked for both options.
+
+        <Frame>
+          <img src="/images/human-support-escalation-12.png" />
+        </Frame>
+      </Step>
+    </Steps>
+  </Accordion>
+
+  {" "}
+
+  <Accordion icon="edge" title="Microsoft Edge" iconType="duotone">
+    <Steps>
+      <Step title="Settings">
+        Click on the button near url in the top-left corner, then select
+        “Permissions for this site”.
+
+        <Frame>
+          <img src="/images/human-support-escalation-13.png" />
+        </Frame>
+      </Step>
+
+      <Step title="Enable permissions">
+        Make sure that "Notifications" are set to Allow in "Permissions settings"
+
+        <Frame>
+          <img src="/images/human-support-escalation-14.png" />
+        </Frame>
+      </Step>
+    </Steps>
+  </Accordion>
 
   <Accordion icon="safari" title="Safari" iconType="duotone">
     <Steps>
       <Step title="Chatwize settings">
         Click on "Safari" in the top-left corner of your screen, then select
         "Settings for app-chatwize.com".
+
         <Frame>
           <img src="/images/human-support-escalation-15.png" />
         </Frame>
       </Step>
+
       <Step title="Enable pop-ups">
         Make sure that "Pop-up Windows" are set to Allow.
+
         <Frame>
           <img src="/images/human-support-escalation-16.png" />
         </Frame>
       </Step>
+
       <Step title="Settings">
         Click on "Safari" in the top-left corner of your screen, then select
         "Settings".
+
         <Frame>
           <img src="/images/human-support-escalation-17.png" />
         </Frame>
       </Step>
+
       <Step title="Enable notifications">
         In the "Websites" tab, choose "Notifications" option and make sure that
         permissions are set to "Allow" for **app-chatwize.com**
+
         <Frame>
           <img src="/images/human-support-escalation-18.png" />
         </Frame>
@@ -200,18 +222,23 @@ for different apps, including browsers. To enable notifications, choose your ope
       <Step title="Settings">
         Click on the "Apple" in the top-left corner, then select "System
         Settings".
+
         <Frame>
           <img src="/images/human-support-escalation-19.png" />
         </Frame>
       </Step>
+
       <Step title="Browser notifications">
         Choose "Notifications" option and select the browser you wish to use.
+
         <Frame>
           <img src="/images/human-support-escalation-20.png" />
         </Frame>
       </Step>
+
       <Step title="Enable notifications">
         Make sure that "Allow notifications" option is enabled.
+
         <Frame>
           <img src="/images/human-support-escalation-21.png" />
         </Frame>
@@ -224,19 +251,24 @@ for different apps, including browsers. To enable notifications, choose your ope
       <Step title="Settings">
         In the search bar, type "notifications" and select the "Turn app
         notifications on or off" option from the search results.
+
         <Frame>
           <img src="/images/human-support-escalation-22.png" />
         </Frame>
       </Step>
+
       <Step title="System notifications">
         Enable system notifications **(Optional)** and select your preferred
         browser under "Notifications from apps and other senders" list.
+
         <Frame>
           <img src="/images/human-support-escalation-23.png" />
         </Frame>
       </Step>
+
       <Step title="Browser notifications">
         Make sure that "Notifications" are On for your browser.
+
         <Frame>
           <img src="/images/human-support-escalation-24.png" />
         </Frame>
