--- a/human-support-escalation.mdx
+++ b/human-support-escalation.mdx
@@ -57,21 +57,17 @@ You may stay and continue to monitor the user's interaction with the chatbot as 
 Depending on your use case, you may wish to fine tune the circumstances when the user should be redirected to a human agent. To do so, please
 review our documentation on [Fine Tuning Agent Intents](fine-tuning-agent-intents).
 
-## Enabled Human Support Notifications
+## Enable Human Support Notifications
 
-Our Human Escalation Agent provides essential notifications, ensuring prompt assistance when your users request support. These notifications enable
-you to address queries swiftly, enhancing user satisfaction and operational efficiency. However, to make these notifications work seamlessly,
-certain steps need to be followed.
+To receive alerts on human support requests, follow the steps below.
 
-### Access Human Escalation Agent Settings
+### Turn on Alert Modes
 
-1. Navigate to Settings: Enter your Human Escalation Agent settings.
+1. Go to Customizations tab on the left navigation bar.
 
-2. Enable Human Escalation Notifications: This ensures that notifications related to user support requests are activated.
+2. Enable Human Escalation Notifications toggle - This ensures that notifications related to user support requests are activated.
 
-3. Notification Sound: Activate this option if you wish to receive an audible alert along with the notifications.
-
-4. Save Changes: This ensures that your preferences are applied and notifications are set up according to your selections.
+3. Enable Notification Sound - Activate this option if you wish to receive an audible alert along with the notifications.
 
 <Frame>
   <img src="/images/human-support-escalation-8.png" />
