--- a/human-support-escalation.mdx
+++ b/human-support-escalation.mdx
@@ -30,7 +30,7 @@ Go to “Go Live” tab, click “Share”. You may need to change your chatbot 
   <img src="/images/human-support-escalation-27.png" />
 </Frame>
 
-Once you have the link, open a new browser tab and navigate to it. Do not close the original gpt-trainer tab. You should be taken to the chatbot as a typical user. You can then test it by submitting queries requesting human support.
+Once you have the link, open a new browser tab and navigate to it. Do not close the original Chatwize tab. You should be taken to the chatbot as a typical user. You can then test it by submitting queries requesting human support.
 
 <Frame>
   <img src="/images/human-support-escalation-28-1.png" />
