--- a/creating-first-chatbot.mdx
+++ b/creating-first-chatbot.mdx
@@ -2,7 +2,7 @@
 title: Create Your First Chatbot
 ---
 
-To get started, first log in to your account. If this is your first time using GPT-trainer, you will be asked to complete some initial onboarding steps. Afterwards, you will be presented with the ability to build an AI chatbot from one of our templates:
+To get started, first log in to your account. If this is your first time using Chatwize, you will be asked to complete some initial onboarding steps. Afterwards, you will be presented with the ability to build an AI chatbot from one of our templates:
 
 ![](chatbot.png)
 
@@ -36,7 +36,7 @@ Wait for the training to complete. Then, click “Try it out”. Chatwize will o
 
 In general, the chatbot should be well-configured enough as-is for most common use cases. However, if you would like to fine tune the chatbot behavior further, update the training data or appearance, or even add additional AI Agents to expand the chatbot’s capabilities, you can do it by opening the chatbot and tweaking various options on the left navigation bar.
 
-Close the chatbot testing tab. You will return to GPT-trainer’s main interface. Go through the onboarding guide to learn more about your options.
+Close the chatbot testing tab. You will return to Chatwize’s main interface. Go through the onboarding guide to learn more about your options.
 
 When you are ready to deploy your chatbot, head to the **Go Live** tab.
 
