--- a/lead-collection.mdx
+++ b/lead-collection.mdx
@@ -6,7 +6,7 @@ There are two ways to collect data from users when they engage with your AI Chat
 
 There are pros and cons for each approach. Forms are easier to set up and is programmatic, but collecting information conversationally is more natural and engaging despite the added complexity. You can send any collected data via webhook to a CRM as soon as your user submits it.
 
-[​](https://guide.gpt-trainer.com/lead-collection#collecting-data-through-a-form)
+[​](https://guide-chatwize.com/lead-collection#collecting-data-through-a-form)
 Collecting data through a form
 ------------------------------
 
@@ -22,13 +22,13 @@ For custom fields, you can change the field types (text, dropdown, checkbox). Yo
 
 ![](https://mintlify.s3.us-west-1.amazonaws.com/paladinmaxinc/images/lead-collection-15.png)
 
-[​](https://guide.gpt-trainer.com/lead-collection#collecting-data-conversationally)
+[​](https://guide.Chatwize.com/lead-collection#collecting-data-conversationally)
 Collecting data conversationally
 --------------------------------
 
 If you want to maintain a natural conversational flow and collect data from users directly, you will have to configure your AI Agent(s) prompt and set up variables to store the collected information.
 
-### [​](https://guide.gpt-trainer.com/lead-collection#editing-the-prompt)&#xA;Editing the prompt
+### [​](https://guide.Chatwize.com/lead-collection#editing-the-prompt)&#xA;Editing the prompt
 
 The behavior of your AI Chat is governed by your AI Agent(s)‘s prompt. To review and edit the prompt, go to AI Agents tab on the left navigation menu, then click on the Agent you’d like to edit.
 
@@ -47,7 +47,7 @@ Configure your prompt to include detailed instructions for collecting user data.
 
 But this only directs the AI to ask for information from the user. We still need a way to store the collected information. Next, we’ll teach you how to store the collected data into variables.
 
-### [​](https://guide.gpt-trainer.com/lead-collection#setting-up-variables)&#xA;Setting up variables
+### [​](https://guide.Chatwize.com/lead-collection#setting-up-variables)&#xA;Setting up variables
 
 Go to Customizations tab on right navigation bar, then scroll down until you see “User Data Collection”. Click to expand it.
 
@@ -67,11 +67,11 @@ Variable values can change if the user specifies that they want to make a correc
 
 ![](20.PNG)
 
-[​](https://guide.gpt-trainer.com/lead-collection#sending-data-to-your-crm)
+[​](https://guide.Chatwize.com/lead-collection#sending-data-to-your-crm)
 Sending data to your CRM
 ------------------------
 
-Regardless of whether you want to collect data using a form or conversationally, you may wish to send that information to another CRM for follow up. GPT-trainer supports webhooks with smart triggers that can alert you to new leads as soon as they engage with the AI.
+Regardless of whether you want to collect data using a form or conversationally, you may wish to send that information to another CRM for follow up. Chatwize supports webhooks with smart triggers that can alert you to new leads as soon as they engage with the AI.
 
 Go to Customizations tab on the left navigation menu. Then scroll down to “Webhook”. Click to expand it.
 
@@ -83,4 +83,4 @@ If you are using variables to store user data, then you can select the “Data C
 
 If you want certain variables to be optional, then you can give it a default value during variable setup. This way, it will always be in a populated state and never empty.
 
-[​](https://guide.gpt-trainer.com/lead-collection#sending-data-by-email)
+[​](https://guide-chatwize.com/lead-collection#sending-data-by-email)
