--- a/multi-agents-chatbot.mdx
+++ b/multi-agents-chatbot.mdx
@@ -2,137 +2,118 @@
 title: Multi-Agents Chatbot
 ---
 
-Chatwize is the first and most powerful LLM-native conversational AI platform that
-implements a multi-agent architecture. Multiple AI Agents work together in a coordinated orchestration
-to enable you to create solutions with unprecedented versatility, speed, and automation.
+#
 
-We present this guide to help you understand how our Agents work together, as well as share
-with you some best practices surrounding multi-agent chatbot design.
+GPT-trainer is the first and most powerful no-code AI Chat framework that implements a multi-agent architecture. Multiple AI Agents work together in a coordinated orchestration to enable advanced workflow automations.
 
-Chatwize has 2 types of Agents:
+![](multiagent1.PNG)
 
-    - **User-facing:** Agent directly interacts with users conversationally in a Q&A fashion.
-    Only a single user-facing Agent engages with the user when a new query is input into the chatbot.
-
-    - **Background:** Agent never interacts with users directly and instead monitors the conversation
-    in an ongoing fashion. All background Agents are run whenever the user submits a new query to the chatbot.
-
-<Frame>
-  <img src="/images/multi-agents-chatbot-1.png" />
-</Frame>
+We present this guide to help you understand how our Agents work together, as well as share with you some best practices surrounding multi-agent chatbot design.
 
 All Agents have two states:
 
-    - **Active:** Agent is “Connected”. It is live and running.
-    - **Inactive:** Agent is “Disabled”. It does not do anything.
+* **Active:** Agent is “Connected”. It is live and running.
 
-Since only a single user-facing Agent engages with the user at any given time, our system
-must choose the best user-facing Agent based on their respective specializations. To do this,
-we have our own AI Supervisor working in the background to conduct **intent classification**.
+* **Inactive:** Agent is “Disabled”. It does not do anything.
 
-<Note>
-  Agents are completely isolated from one another. This means that you cannot
-  direct the behavior, bias, or selection priority of one Agent from inside
-  another Agent.
-</Note>
+Only a single Agent engages with the user at any given time. Our AI Supervisor works in the background, in real time, to decide which Agent processes the user’s inquiry when it comes in.
 
-Since the only reliable source of information our AI Supervisor has when determining which Agent
-is best suited to perform which tasks is the “Agent Description”, it is **absolutely crucial** that you provide
-an explicit and clear description for **every User Facing Agent**.
+Agents are completely isolated from one another. This means that you cannot tell Agent B what to do from inside Agent A, and you cannot tell the AI Supervisor to “pass the baton” from Agent A to Agent B directly. The AI Supervisor cannot be instructed on what to do using natural language.
 
-<Frame>
-  <img src="/images/multi-agents-chatbot-2.png" />
-</Frame>
+The AI Supervisor assigns user queries to AI Agents based on the Agent description. This means that if you have only a single AI Agent, then you don’t need a very good description. But if you are working with multiple AI Agents, then you should have as explict a description as possible.
 
-Good Agent descriptions should answer the question **“What type of queries should the Agent handle?”**
-More specifically, Agent descriptions should encompass all relevant “user intents” that it is supposed to handle.
+* Agent Description - What kind of tasks should the Agent do?
+
+* Agent Prompt - How should the Agent perform its tasks?
+
+![](multiagent2.PNG)AI Agent description is different from the Prompt. Description should tell the AI Supervisor what the Agent is designed to do at a high level, focusing on the type of user queries it should handle. Prompt is a set of instructions telling the AI Agent how to behave.
+
+Good Agent descriptions should answer the question **“What type of queries should the Agent handle?”** More specifically, Agent descriptions should encompass all relevant “user intents” that it is supposed to handle.
+
+Agent descriptions **should not** include details about “how the Agent performs its job”. That part should be reserved for the Agent’s Prompt.
+
 Here are some examples of good Agent descriptions:
 
-<AccordionGroup>
-  <Accordion title="Chatwize Assistant">
-    Embody the role of "Chatwize Expert," a specialized guide for Chatwize. Your main objective is to assist users with answering Chatwize-related questions related to:
-    - Use cases
-    - Features and capabilities
-    - Data security
-    - Pricing
-    - AI Agents and multi-Agent architecture
-    - User identity verification
-    - Chunk curation
-    - Function calling
-    - Partnership program
-    - Custom domains
-    - Tokens
+GPT-trainer Support
 
-    All intents handled by this Agent should be related to Chatwize.
-  </Accordion>
+Embody the role of “GPT-Trainer Expert,” a specialized guide for GPT-Trainer. Your main objective is to assist users with answering GPT-trainer-related questions related to:
 
-  <Accordion title="Lead Collection">
-    The Lead Collection agent specializes in requesting personal and contact
-    information from users.
-  </Accordion>
+* Use cases
 
-  <Accordion title="Returns">
-    Returns agent is used to handle merchandise returns requests and related
-    administrative or logistics inquiries.
-  </Accordion>
+* Features and capabilities
 
-  <Accordion title="Fruits Q&A">
-    The Fruits Q&A handles questions specifically about fruits.
-  </Accordion>
+* Data security
 
-  <Accordion title="Unrelated Query Defender">
-    The Unrelated Query Defender Agent handles any user queries not related to Chatwize. This includes requests for:
-    - writing assistance
-    - artistic expressions
-    - homework help
-    - professional advice
-    - making selections
+* Pricing
 
-  </Accordion>
+* AI Agents and multi-Agent architecture
 
-</AccordionGroup>
+* User identity verification
 
-Agent descriptions **should not** include details about “how the Agent performs its job”.
-That part should be reserved for the Agent’s base prompt. Text such as “Agent provides informed
-answers based on knowledge from the source library.” is not needed and can be distracting to the AI Supervisor.
+* Chunk curation
 
-So what makes for a good multi-agent chatbot design? How can I ensure that all my intended user intents are handled by the appropriate Agent?
+* Function calling
 
-To learn more about fine-tuning Agent intents, please check out the article [Fine-Tuning Agent Intents](fine-tuning-agent-intents).
+* Partnership program
 
-In our AI Supervisor routing design, we use an algorithm that balances latency, consistency,
-and comprehensiveness. It will not always give you 100% accuracy,
-but you can get pretty close if you design your chatbots effectively.
+* Custom domains
 
-## Debugging the chatbot
+* Tokens
 
-If you notice that the chatbot is not responding to your expectations, then there may be two causes. 
-  1. The wrong Agent may have been assigned to handle the incoming user query. 
-  2. The Agent itself may not be optimally configured.
+All intents handled by this Agent should be related to GPT-trainer.
 
-To find out whether your intended Agent has been selected to handle the user’s query, go to “Inbox” and turn on debug mode.
+Product Expert
 
-<Frame>
-  <img src="/images/multi-agents-chatbot-3.png" />
-</Frame>
+The Product Expert handles any user queries related to Example Company’s products. This includes questions regarding: - Product availability - Product specifications - Price - Shipping location - Warranty - Return policy - Disclaimers, legal notices, and warning labels
 
-Under “Active Agent”, you will see the Agent that generated the response. Please note that you will only see “Active Agent” metadata 
-if you have more than one active user-facing Agents.
+Order Status Assistant
 
-If the Agent that handled the user query was not the correct one, you can return to Agent configuration and update its name, description, 
-or prompt.
+The Order Status Assistant handles any user queries related to an order’s status. This includes questions regarding:
 
-If the correct Agent handled the user query but the response was not what you expected, then the issue resides within the Agent itself. 
-You will then need to update the Agent configuration. The most straightforward way to fix a response is by revising the AI’s answer directly:
+* Product package tracking
 
-<Frame>
-  <img src="/images/multi-agents-chatbot-4.png" />
-</Frame>
+* Current package location
 
-This ensures that the chatbot will generate an answer based on what you revised every time it encounters the question in the future, assuming 
-the same Agent was chosen to respond to the query.
+* Estimated time of delivery
 
-If you’d like to make the Agent more robust and consistent in general, you can curate the training data, choose a more powerful LLM, or be more 
-explicit in your base prompt. To learn some best practices for training the chatbot, see [best practices for preparing training data](/best-practices)
+* Late delivery compensation
 
-**Happy building!**
+So what makes for a good multi-agent chatbot design? How can I ensure that all my user intents are handled by the appropriate Agent?
+
+In general, a multi-agent architecture is great for having specialized AI Agents work together as a team. Each AI Agent can be trained on a different set of source data, be powered by a different LLM, have a different Prompt, or even be given different tools (functions). It is much more effective than dumping everything into a single Agent.
+
+On the surface, your users will not know that they are engaging with multiple AI Agents when talking to the chatbot, since all of the complex orchestration takes place seamlessly behind the scenes. With the right setup, they will feel as though they are talking to a human instead of a machine. A multi-agent chatbot has the potential to be much more powerful than single-agent ones like ChatGPT.
+
+In our AI Supervisor routing design, we use an algorithm that balances latency with performance. It will not always give you 100% accuracy, but you can get pretty close if you design your chatbots effectively.
+
+[​](https://guide.gpt-trainer.com/multi-agents-chatbot#debugging-the-chatbot)
+Debugging the chatbot
+---------------------
+
+If you notice that the chatbot is not responding to your expectations, then there may be two causes.
+
+1. The wrong Agent may have been assigned to handle the incoming user query.
+
+2. The Agent itself may not be optimally configured.
+
+To find out whether your intended Agent has been selected to handle the user’s query, go to “Inbox” and turn on debug mode. Toggle it on here:
+
+![](https://mintlify.s3.us-west-1.amazonaws.com/paladinmaxinc/images/multi-agents-chatbot-6.png)
+
+Under “Active Agent”, you will see the Agent that generated the response. Please note that you will only see “Active Agent” metadata if you have more than one connected AI Agents.
+
+If the Agent that handled the user query was not the correct one, you can return to Agent configuration and update its name, description, or prompt.
+
+If the correct Agent handled the user query but the response was not what you expected, then the issue resides within the Agent itself. You will then need to update the Agent configuration. The most straightforward way to fix a response is by revising the AI’s answer directly:
+
+![](multiagent3.PNG)This ensures that the chatbot will generate an answer based on what you revised every time it encounters the question in the future, assuming the same Agent was chosen to respond to the query.
+
+If you’d like to make the Agent more robust and consistent in general, you can curate the training data, choose a more powerful LLM, or be more explicit in your base prompt.
+
+To learn some best practices for training the chatbot, see [best practices for preparing training data](https://guide.gpt-trainer.com/best-practices)
+
+To learn more about fine-tuning Agent intents, please check out the article [Fine-Tuning Agent Intents](https://guide.gpt-trainer.com/fine-tuning-agent-intents).
+
+---
+title: Multi-Agents Chatbot
+---
