Documentation edits made through Mintlify web editor

--- a/multi-agents-chatbot.mdx
+++ b/multi-agents-chatbot.mdx
@@ -26,7 +26,9 @@ The AI Supervisor assigns user queries to AI Agents based on the Agent descripti
 
 * Agent Prompt - How should the Agent perform its tasks?
 
-![](multiagent2.PNG)AI Agent description is different from the Prompt. Description should tell the AI Supervisor what the Agent is designed to do at a high level, focusing on the type of user queries it should handle. Prompt is a set of instructions telling the AI Agent how to behave.
+![](multiagent2.PNG)
+
+AI Agent description is different from the Prompt. Description should tell the AI Supervisor what the Agent is designed to do at a high level, focusing on the type of user queries it should handle. Prompt is a set of instructions telling the AI Agent how to behave.
 
 Good Agent descriptions should answer the question **“What type of queries should the Agent handle?”** More specifically, Agent descriptions should encompass all relevant “user intents” that it is supposed to handle.
 
@@ -106,14 +108,12 @@ If the Agent that handled the user query was not the correct one, you can return
 
 If the correct Agent handled the user query but the response was not what you expected, then the issue resides within the Agent itself. You will then need to update the Agent configuration. The most straightforward way to fix a response is by revising the AI’s answer directly:
 
-![](multiagent3.PNG)This ensures that the chatbot will generate an answer based on what you revised every time it encounters the question in the future, assuming the same Agent was chosen to respond to the query.
+![](multiagent3.PNG)
+
+This ensures that the chatbot will generate an answer based on what you revised every time it encounters the question in the future, assuming the same Agent was chosen to respond to the query.
 
 If you’d like to make the Agent more robust and consistent in general, you can curate the training data, choose a more powerful LLM, or be more explicit in your base prompt.
 
 To learn some best practices for training the chatbot, see [best practices for preparing training data](https://guide.gpt-trainer.com/best-practices)
 
 To learn more about fine-tuning Agent intents, please check out the article [Fine-Tuning Agent Intents](https://guide.gpt-trainer.com/fine-tuning-agent-intents).
-
----
-title: Multi-Agents Chatbot
----
