--- a/multi-agents-chatbot.mdx
+++ b/multi-agents-chatbot.mdx
@@ -4,7 +4,7 @@ title: Multi-Agents Chatbot
 
 #
 
-GPT-trainer is the first and most powerful no-code AI Chat framework that implements a multi-agent architecture. Multiple AI Agents work together in a coordinated orchestration to enable advanced workflow automations.
+Chatwize is the first and most powerful no-code AI Chat framework that implements a multi-agent architecture. Multiple AI Agents work together in a coordinated orchestration to enable advanced workflow automations.
 
 ![](12312.PNG)
 
@@ -36,9 +36,9 @@ Agent descriptions **should not** include details about “how the Agent perfo
 
 Here are some examples of good Agent descriptions:
 
-GPT-trainer Support
+Chatwize Support
 
-Embody the role of “GPT-Trainer Expert,” a specialized guide for GPT-Trainer. Your main objective is to assist users with answering GPT-trainer-related questions related to:
+Embody the role of “Chatwize Expert,” a specialized guide for Chatwize. Your main objective is to assist users with answering Chatwize-related questions related to:
 
 * Use cases
 
@@ -62,7 +62,7 @@ Embody the role of “GPT-Trainer Expert,” a specialized guide for GPT-Trainer
 
 * Tokens
 
-All intents handled by this Agent should be related to GPT-trainer.
+All intents handled by this Agent should be related to Chatwize.
 
 Product Expert
 
@@ -88,7 +88,7 @@ On the surface, your users will not know that they are engaging with multiple AI
 
 In our AI Supervisor routing design, we use an algorithm that balances latency with performance. It will not always give you 100% accuracy, but you can get pretty close if you design your chatbots effectively.
 
-[​](https://guide.gpt-trainer.com/multi-agents-chatbot#debugging-the-chatbot)
+[​](https://guide-chatwize.com/multi-agents-chatbot#debugging-the-chatbot)
 Debugging the chatbot
 ---------------------
 
@@ -116,6 +116,6 @@ This ensures that the chatbot will generate an answer based on what you revised 
 
 If you’d like to make the Agent more robust and consistent in general, you can curate the training data, choose a more powerful LLM, or be more explicit in your base prompt.
 
-To learn some best practices for training the chatbot, see [best practices for preparing training data](https://guide.gpt-trainer.com/best-practices)
+To learn some best practices for training the chatbot, see [best practices for preparing training data](https://guide-chatwize.com/best-practices)
 
-To learn more about fine-tuning Agent intents, please check out the article [Fine-Tuning Agent Intents](https://guide.gpt-trainer.com/fine-tuning-agent-intents).
+To learn more about fine-tuning Agent intents, please check out the article [Fine-Tuning Agent Intents](https://guide-chatwize.com/fine-tuning-agent-intents).
