--- a/multi-agents-chatbot.mdx
+++ b/multi-agents-chatbot.mdx
@@ -69,11 +69,11 @@ Embody the role of “Chatwize Expert,” a specialized guide for Chatwize. Your
 
 All intents handled by this Agent should be related to Chatwize.
 
-Product Expert
+##Product Expert
 
 The Product Expert handles any user queries related to Example Company’s products. This includes questions regarding: - Product availability - Product specifications - Price - Shipping location - Warranty - Return policy - Disclaimers, legal notices, and warning labels
 
-Order Status Assistant
+##Order Status Assistant
 
 The Order Status Assistant handles any user queries related to an order’s status. This includes questions regarding:
 
