Documentation edits made through Mintlify web editor

--- a/multi-agents-chatbot.mdx
+++ b/multi-agents-chatbot.mdx
@@ -32,7 +32,6 @@ The AI Supervisor assigns user queries to AI Agents based on the Agent descripti
   <img src="/images/213213.png" />
 </Frame>
 
-
 AI Agent description is different from the Prompt. Description should tell the AI Supervisor what the Agent is designed to do at a high level, focusing on the type of user queries it should handle. Prompt is a set of instructions telling the AI Agent how to behave.
 
 Good Agent descriptions should answer the question **“What type of queries should the Agent handle?”** More specifically, Agent descriptions should encompass all relevant “user intents” that it is supposed to handle.
@@ -69,11 +68,11 @@ Embody the role of “Chatwize Expert,” a specialized guide for Chatwize. Your
 
 All intents handled by this Agent should be related to Chatwize.
 
-##Product Expert
+## **Product Expert**
 
 The Product Expert handles any user queries related to Example Company’s products. This includes questions regarding: - Product availability - Product specifications - Price - Shipping location - Warranty - Return policy - Disclaimers, legal notices, and warning labels
 
-##Order Status Assistant
+## **Order Status Assistant**
 
 The Order Status Assistant handles any user queries related to an order’s status. This includes questions regarding:
 
@@ -112,7 +111,6 @@ Under “Active Agent”, you will see the Agent that generated the response. Pl
 If the Agent that handled the user query was not the correct one, you can return to Agent configuration and update its name, description, or prompt.
 
 If the correct Agent handled the user query but the response was not what you expected, then the issue resides within the Agent itself. You will then need to update the Agent configuration. The most straightforward way to fix a response is by revising the AI’s answer directly:
-
 
 <Frame>
   <img src="/images/321321.png" />
